@@ -1,8 +1,13 @@
 use strict;
 use warnings;
 
-use MaxMind::DB::Reader;
+use lib 't/lib';
 
+# This must come before `use MaxMind::DB::Reader;` as otherwise the wrong
+# reader may be loaded
+use Test::MaxMind::DB::Reader;
+
+use MaxMind::DB::Reader;
 use Test::More;
 
 ok( !exists $INC{'Moose.pm'}, 'Moose.pm is not in %INC' );
