@@ -4,10 +4,12 @@ package    # hide from PAUSE
 use strict;
 use warnings;
 
-use MaxMind::DB::Reader::PP;
+BEGIN {
+    ## no critic (Variables::RequireLocalizedPunctuationVars)
+    $ENV{MAXMIND_DB_READER_IMPLEMENTATION} = 'PP';
+}
 
-## no critic (Variables::RequireLocalizedPunctuationVars)
-$ENV{MAXMIND_DB_READER_IMPLEMENTATION} = 'PP';
+use MaxMind::DB::Reader::PP;
 
 require MaxMind::DB::Reader;
 
